--- a/about-1.html
+++ b/about-1.html
@@ -240,58 +240,38 @@
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-lg-7">
-            <div class="section-title-1 position-relative pb-3 mb-5">
-              <h5 class="fw-bold text-primary text-uppercase">About Us</h5>
-              <h1 class="mb-0">
-                The Best IT Solution With 10 Years of Experience
-              </h1>
-            </div>
-            <p class="mb-4">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor
-              sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem
-              et sit, sed stet no labore lorem sit. Sanctus clita duo justo et
-              tempor eirmod magna dolore erat amet
+            <h1 class="mb-4">Your Gateway to Success in Accounting</h1>
+            <p>
+              Welcome to Prospire Institution, a distinguished leader in the
+              field of accounting-based education and training. Our core mission
+              is to empower students to achieve their career aspirations through
+              expert guidance and personalized career advice. At Prospire, we
+              believe in investing in the best tutors and a unique progress
+              tracking system to make the most of your time and resources.
             </p>
-            <div class="row g-0 mb-3">
-              <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
-                <h5 class="mb-3">
-                  <i class="fa fa-check text-primary me-3"></i>Award Winning
-                </h5>
-                <h5 class="mb-3">
-                  <i class="fa fa-check text-primary me-3"></i>Professional
-                  Staff
-                </h5>
-              </div>
-              <div class="col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                <h5 class="mb-3">
-                  <i class="fa fa-check text-primary me-3"></i>24/7 Support
-                </h5>
-                <h5 class="mb-3">
-                  <i class="fa fa-check text-primary me-3"></i>Fair Prices
-                </h5>
-              </div>
-            </div>
-            <div
-              class="d-flex align-items-center mb-4 wow fadeIn"
-              data-wow-delay="0.6s"
-            >
-              <div
-                class="bg-primary d-flex align-items-center justify-content-center rounded"
-                style="width: 60px; height: 60px"
-              >
-                <i class="fa fa-phone-alt text-white"></i>
-              </div>
-              <div class="ps-4">
-                <h5 class="mb-2">Call to ask any question</h5>
-                <h4 class="text-primary mb-0">+012 345 6789</h4>
-              </div>
-            </div>
-            <a
-              href
-              class="btn btn-primary py-3 px-5 mt-3 wow zoomIn"
-              data-wow-delay="0.9s"
-              >Request A Quote</a
-            >
+            <p>
+              What sets us apart is our collaborative spirit. We form strategic
+              partnerships with industry leaders, enabling us to offer courses
+              led by renowned Chartered Accountants and specialized trainers.
+              Our commitment goes beyond technical knowledge; we also focus on
+              cultivating essential soft skills to ensure your success in the
+              market. Prospire is deeply dedicated to your progress, working
+              diligently to empower you to excel in your chosen career path.
+            </p>
+            <p>
+              Voluptua est takimata stet invidunt sed rebum nonumy stet, clita
+              aliquyam dolores vero stet consetetur elitr takimata rebum
+              sanctus. Sit sed accusam stet sit nonumy kasd diam dolores,
+              sanctus lorem kasd duo dolor dolor vero sit et. Labore ipsum duo
+              sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et,
+              clita lorem sit vero amet amet est dolor elitr, stet et no diam
+              sit. Dolor erat justo dolore sit invidunt.
+            </p>
+            <img
+              class="img-fluid w-100 rounded mb-5"
+              src="img/detail.jpg"
+              alt
+            />
           </div>
           <div class="col-lg-5" style="min-height: 500px">
             <div class="position-relative h-100">
