--- a/service-detail.html
+++ b/service-detail.html
@@ -121,7 +121,7 @@
                 >Home</a
               >
               <div class="dropdown-menu m-0">
-                <a href="index-1.html" class="dropdown-item">Home 1</a>
+                <a href="index.html" class="dropdown-item">Home 1</a>
                 <a href="index-2.html" class="dropdown-item">Home 2</a>
               </div>
             </div>
