--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,9 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="prospire | Education & Institution" />
-  <meta name="keywords" content="academy, course, education, education, cma, learning," />
+  <meta name="description" content="prospire | Education & Institution | Best CMA Institute in kannur" />
+  <meta name="keywords" content="Prospire Education, CMA institute in Kannur , Best EA campus in Kannur , North Kerala , cma college in kannur , cma course details , cma usa course details , cma course duration , accounting course , business education , free training , education classes , career courses , education courses
+  business courses, CMA India course, CMA college in Kannur, ACCA course in Kannur, college, fee, education, education, cma, acca, learning, EA course, kerala, Kannur, near me , CMA ACCA EA courses , Institute" />
 
   <meta name="google-site-verification" content="mDur_Lv60e9VIH8-TnpzP6mj1Sg0d_DWaYEJWOHh6iQ" />
   <meta property="og:title" content="prospire education">
